cluster-infra/minio/standalone/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  labels:
    name: minio
    app.kubernetes.io/name: minio
    app.kubernetes.io/component: storage
